fix: improve startup data loading using ApplicationRunner
- Ensure aggregated finance data loads once at startup
- Store data in in-memory storage
- Remove improper initialization approach